Add backup_network to Docker Compose examples
- Integrated a new network configuration named `backup_network` across multiple Docker Compose example files for better service isolation and management.
- Updated services in each example to connect to the `backup_network`, enhancing the overall architecture and facilitating backup operations.

--- a/examples/docker-compose.development.yml
+++ b/examples/docker-compose.development.yml
@@ -15,6 +15,8 @@ services:
       backup.dest: "local"
       backup.prefix: "dev/postgres"
       backup.retention: "3d"
+    networks:
+      - backup_network
 
   label-backup:
     image: resulgg/label-backup
@@ -30,3 +32,9 @@ services:
       - postgres-dev
     ports:
       - "8080:8080"
+    networks:
+      - backup_network
+
+networks:
+  backup_network:
+    driver: bridge
