--- a/examples/docker-compose.multi-database.yml
+++ b/examples/docker-compose.multi-database.yml
@@ -15,6 +15,8 @@ services:
       backup.dest: "s3"
       backup.prefix: "app/postgres"
       backup.retention: "14d"
+    networks:
+      - backup_network
 
   mysql:
     image: mysql:8.0
@@ -31,6 +33,8 @@ services:
       backup.dest: "s3"
       backup.prefix: "analytics/mysql"
       backup.retention: "30d"
+    networks:
+      - backup_network
 
   mongodb:
     image: mongo:7
@@ -46,6 +50,8 @@ services:
       backup.dest: "s3"
       backup.prefix: "app/mongodb"
       backup.retention: "7d"
+    networks:
+      - backup_network
 
   redis:
     image: redis:7
@@ -56,6 +62,8 @@ services:
       backup.dest: "local"
       backup.prefix: "cache/redis"
       backup.retention: "3d"
+    networks:
+      - backup_network
 
   label-backup:
     image: resulgg/label-backup
@@ -80,3 +88,9 @@ services:
       - redis
     ports:
       - "8080:8080"
+    networks:
+      - backup_network
+
+networks:
+  backup_network:
+    driver: bridge
