--- a/examples/docker-compose.postgres-local.yml
+++ b/examples/docker-compose.postgres-local.yml
@@ -15,6 +15,8 @@ services:
       backup.dest: "local"
       backup.prefix: "postgres-backups"
       backup.retention: "7d"
+    networks:
+      - backup_network
 
   label-backup:
     image: resulgg/label-backup
@@ -29,3 +31,9 @@ services:
       - postgres
     ports:
       - "8080:8080"
+    networks:
+      - backup_network
+
+networks:
+  backup_network:
+    driver: bridge
